--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,11 @@
-<ul style="display:inline-block; margin: 0 auto;">
-  <li><a href='\'> Home </a></li>
-  <li><a href='\contact'> Contact </a></li>
-</ul>
+<h1 style="text-align: center;font-size: 2.4rem;"> WELCOME,  </h1>
+
+<div class="menu">
+  <p class="menubar"><a href='\newMaintain'> New Maintenance </a></p>
+  <p class="menubar"><a href='\track'> Track Request </a></p>
+  <p class="menubar"><a href='\staff'> Maintenance Staff </a></p>
+  <p class="menubar"><a href='\approve'> Maintenance Approve/Reject </a></p>
+  <p class="menubar"><a href='\report'> Report Case </a></p>
+  <p class="menubar"><a href="\createAccount"> Create New User </a></p>
+  <p class="menubar" onclick="signOut()"><a href="javascript:void(0)"> Sign Out </a></p>
+</div>
