--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,9 +3,10 @@ html{
   font-family: 'Slabo 27px', serif;
   font-family: 'Arsenal', sans-serif;
   color: #0b0b0b;
+  position: relative;
 }
 
-input[type="text"],input[type="email"],textarea {
+input[type="text"],input[type="email"],textarea,input[type="password"] {
     width: 70%;
     padding: 20px;
     background:#181c22;
@@ -88,4 +89,11 @@ a:active {
 
 .show {
   display: inline;
+}
+
+th, td {
+  width: 10%;
+  font-size: 1.5rem;
+  border: 2px solid black;
+  text-align: center;
 }
