--- a/views/maintainLog.ejs
+++ b/views/maintainLog.ejs
@@ -28,6 +28,7 @@
           <th>Car Model</th>
           <th>Engine No</th>
           <th>Damage</th>
+          <th>Status</th>
         </tr>
 
       </table>
