--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,6 +3,7 @@
 <div class="menu">
   <p class="menubar"><a href='\newMaintain'> New Maintenance </a></p>
   <p class="menubar"><a href='\track'> Track Request </a></p>
+  <p class="menubar"><a href='\approvereject'> Maintenance Approval </a></p>
   <p class="menubar"><a href='\newStaff'> Add New Staff </a></p>
   <p class="menubar"><a href='\staff'> Maintenance Staff </a></p>
   <p class="menubar"><a href='\maintainLog'> Maintenance Log </a></p>
