--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,22 +12,21 @@
 <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
 </head>
 <body>
-    <header>
-        <p>Maintenance Tracker App</p>
-    </header>
+  <header>
+    <p>Maintenance Tracker App</p>
+  </header>
 
-    <div class="login">
-      <!-- <form method="POST" action='/' onsubmit="login"> -->
+  <div class="login">
+    <form method="POST" action='/'>
       <input type="text" id="username" name="username" size="10" maxlength="75" placeholder="Username" style="padding-bottom:10px;"/> <br />
       <input type="password" id="password" name="password" size="30" placeholder="Password" /> <br />
       <br />
-      <button id="createBtn" onclick="login()"> Login </button>
+      <!-- <button id="createBtn" onclick="login()"> Login </button> -->
+      <button id="createBtn"> Login </button>
       <!-- <input type="submit"> Login </input> -->
-      <p style="color:#0b0b0b;float:right;margin-right: 76px;"><a href='\createAccount'> Create Account </a></p>
-      <p style="color:#0b0b0b"> Forgot Password? </p>
-      <form>
-      </div>
-
-      <script src="/assets/scripts/login.js"></script>
+      <p style="color:#0b0b0b"><a href='#'> Forgot Password? </a></p>
+    <form>
+  </div>
+  <!-- <script src="/assets/scripts/login.js"></script> -->
 </body>
 </html>
