--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,9 @@
-<h1 style="text-align: center;font-size: 2.4rem;"> WELCOME </h1>
+<div style="background-color:black;">
+  <h1 style="text-align: center;font-size: 2.4rem;color:white;"> WELCOME </h1>
+</div>
 
 <div class="menu">
+  <p class="menubar"><a href='\admin'> Home </a></p>
   <p class="menubar"><a href='\newMaintain'> New Maintenance </a></p>
   <p class="menubar"><a href='\track'> Track Request </a></p>
   <p class="menubar"><a href='\approvereject'> Maintenance Approval </a></p>
@@ -8,5 +11,5 @@
   <p class="menubar"><a href='\staff'> Maintenance Staff </a></p>
   <p class="menubar"><a href='\maintainLog'> Maintenance Log </a></p>
   <p class="menubar"><a href='\report'> Report Case </a></p>
-  <p class="menubar" onclick="signOut()"><a href="javascript:void(0)"> Sign Out </a></p>
+  <p class="menubar"><a href="javascript:void(0)"> Sign Out </a></p>
 </div>
