--- a/views/maintainLog.ejs
+++ b/views/maintainLog.ejs
@@ -11,11 +11,10 @@
 <link href="https://fonts.googleapis.com/css?family=Arsenal|Slabo+27px" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
-<body>
+<body onload="viewLog()">
   <!-- Partial Template which includes navigation -->
   <% include partials/nav.ejs %>
   <h1 style="text-align: center;text-decoration: underline;"> Maintenance Log </h1>
-  <button id="View Log" onclick="viewLog()"> View Log </button>
   <br />
   <!-- HTML Table to output data from the database -->
   <table>
