--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+koop;<!DOCTYPE html>
 <html>
 <head> <!-- Document HEader starts here -->
 <meta name="keywords" content="maintenance tracker, car, maintenance, andela, bootcamp, project" /> <!-- Keywords used for search engine indexing! -->
