--- a/views/newMaintain.ejs
+++ b/views/newMaintain.ejs
@@ -13,7 +13,7 @@
 <body>
   <% include partials/nav.ejs %>
   <div class="container">
-    <input type="text" id="trackID" name="trackID" size="15" maxlength="8" placeholder="Enter your Plate Number (required)" style="padding-bottom:10px;" /> <br />
+    <input type="text" id="trackID" name="trackID" size="15" maxlength="8" placeholder="Enter your Plate Number/Serial Number (required)" style="padding-bottom:10px;" /> <br />
     <input type="text" name="carModel" id="carModel" size="15" placeholder="Enter your Car Model (required)" style="padding-bottom:10px;"/> <br />
     <input type="text" name="engineNumber" id="engineNumber" size="15" placeholder="Enter your Engine Number" style="padding-bottom:10px;"/> <br />
     <textarea rows="4" cols="50" id="damage" placeholder="Damage Description"></textarea> <br>
