--- a/views/staff.ejs
+++ b/views/staff.ejs
@@ -11,11 +11,8 @@
 <link href="https://fonts.googleapis.com/css?family=Arsenal|Slabo+27px" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
-<body>
+<body onload="viewStaff()">
   <% include partials/nav.ejs %>
-    <button id="View Log" onclick="viewStaff()"> View Log </button>
-    <br />
-    <br />
     <br />
       <h1 style="text-align: center"> Maintenance Staff </h1>
 
