--- a/views/track.ejs
+++ b/views/track.ejs
@@ -13,8 +13,9 @@
 </head>
 <body>
   <% include partials/nav.ejs %>
-  <input type="text" id="trackID" name="trackID" size="15" maxlength="8" placeholder="Enter your track ID" style="padding-bottom:10px;" /> <br />
-  <button id="track" onclick="track()"> Track </button>
+    <input type="text" id="trackID" name="trackID" size="15" maxlength="8" placeholder="Enter your track ID" style="padding-bottom:10px;" /> <br />
+    <button id="track" onclick="track()"> Track </button>
+  </form>
   <br />
   <br />
   <table>
